syntax = "proto3";

package proto;

service PlcRW {
  rpc GetCpuInfo(Plc) returns (S7CpuInfo) {}
  rpc ReadTags(RWReq) returns (RWResult) {}
  rpc WriteTags(RWReq) returns (RWResult) {}
}

enum DataType {
  BOOL = 0;
  INT = 1;
  DINT = 2;
  REAL = 3;
}

message S7CpuInfo {
  string module_type_name = 1;
  string serial_number = 2;
  string as_name = 3;
  string copyright = 4;
  string module_name = 5;
}
message Plc {
  string host = 1;
  uint32 rack = 2;
  uint32 slot = 3;
}
message Tag {
  string address = 1;
  DataType dt = 2;
  oneof value {
    bool value_bool = 3;
    int32 value_int = 4;
    float value_float = 5;
  }
  string err = 6;
}

message RWResult { repeated Tag tags = 2; }

message RWReq {
  Plc plc = 1;
  repeated Tag tags = 2;
}